--- a/Android/view/事件分发机制.md
+++ b/Android/view/事件分发机制.md
@@ -392,26 +392,78 @@ onTouch execute, action 0
 
 　　首先自定义一个布局，命名为 MyLayout，继承自 LinearLayout，如下所示：
 
-```
+```java
+public class MyLayout extends LinearLayout {
+    public MyLayout(Context context) {
+        super(context);
+    }
 
+    public MyLayout(Context context, @Nullable AttributeSet attrs) {
+        super(context, attrs);
+    }
+
+    public MyLayout(Context context, @Nullable AttributeSet attrs, int defStyleAttr) {
+        super(context, attrs, defStyleAttr);
+    }
+}
 ```
 
 　　然后，打开主布局文件 activity_main.xml，在其中加入自定义的布局：
 
-```
+```java
+<com.example.viewgroupdistribute.MyLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/my_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button1" />
+
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Button2" />
+
+</com.example.viewgroupdistribute.MyLayout>
 ```
 
 　　可看看到，在 MyLayout 中添加了两个按钮，接着在 MainActivity 中为这两个按钮和 MyLayout 都注册了监听事件：
 
-```
-
+```java
+        myLayout.setOnTouchListener(new View.OnTouchListener() {
+            @Override
+            public boolean onTouch(View v, MotionEvent event) {
+                Log.d(TAG,"myLayout on touch");
+                return false;
+            }
+        });
+        button1.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                Log.d(TAG,"you clicked button1");
+            }
+        });
+        button2.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                Log.d(TAG,"you clicked button2");
+            }
+        });
 ```
 
 　　在 MyLayout 的 onTouch() 方法和 Button1、Button2 的 onClick 方法中都打印了一句话，运行后分别电一一下 Button1、Button2 和空白区域，打印结果如下：
 
-```
-
+```java
+06-30 14:37:58.110 28623-28623/com.example.viewgroupdistribute D/MainActivity: you clicked button1
+06-30 14:37:59.139 28623-28623/com.example.viewgroupdistribute D/MainActivity: you clicked button2
+06-30 14:37:59.869 28623-28623/com.example.viewgroupdistribute D/MainActivity: myLayout on touch
 ```
 
 　　会发现，当点击按钮的时候，MyLayout 注册的 onTouch() 方法并不会执行，只有点击空白区域的时候才会执行该方法。
@@ -475,14 +527,33 @@ onTouch execute, action 0
 
 　　既然时布尔型的返回，那么只有两种可能，在 MyLayout 中重写这个方法，然后返回一个 true 试试，代码如下所示：
 
-```
+```java
+public class MyLayout extends LinearLayout {
+    public MyLayout(Context context) {
+        super(context);
+    }
 
+    public MyLayout(Context context, @Nullable AttributeSet attrs) {
+        super(context, attrs);
+    }
+
+    public MyLayout(Context context, @Nullable AttributeSet attrs, int defStyleAttr) {
+        super(context, attrs, defStyleAttr);
+    }
+
+    @Override
+    public boolean onInterceptTouchEvent(MotionEvent ev) {
+        return true;
+    }
+}
 ```
 
 　　再次运行然后分别点击 Button1、Button2 和空白区域，打印结果如下所示：
 
-```
-
+```java
+06-30 14:42:55.349 29124-29124/com.example.viewgroupdistribute D/MainActivity: myLayout on touch
+06-30 14:42:57.210 29124-29124/com.example.viewgroupdistribute D/MainActivity: myLayout on touch
+06-30 14:42:58.328 29124-29124/com.example.viewgroupdistribute D/MainActivity: myLayout on touch
 ```
 
 　　会发现，不管点击哪里，永远都只会触发 MyLayout 的 touch 事件了，按钮的点击事件完全被屏蔽掉了！
