--- a/DataStructure/数据结构/树/字典树.md
+++ b/DataStructure/数据结构/树/字典树.md
@@ -63,6 +63,182 @@
 
 ## 基于链表的 Tire 字典树
 
+```java
+/**
+ * 基于链表的 Trie 字典树
+ */
+public class Trie {
+
+    private Node root;
+    private int size; // 存储的单词的个数
+
+    public Trie() {
+        root = new Node();
+    }
+
+    public int size() {
+        return size;
+    }
+
+    public boolean isEmpty() {
+        return size == 0;
+    }
+
+    /**
+     * 插入操作
+     *
+     * @param word 单词
+     */
+    public void add(String word) {
+        Node current = root;
+        char[] cs = word.toCharArray();
+        for (char c : cs) {
+            Node next = current.next.get(c);
+            if (next == null) {
+                // 一个字符对应一个 Node 节点
+                current.next.put(c, new Node());
+            }
+            current = current.next.get(c);
+        }
+        // current 就是 word 的最后一个字符的 Node
+        // 如果当前的 node 已经是一个 word，则不需要添加
+        if (!current.isWord) {
+            size++;
+            current.isWord = true;
+        }
+    }
+
+    /**
+     * 是否包含某个单词
+     *
+     * @param word 单词
+     * @return 存在返回 true，反之 false
+     */
+    public boolean contains(String word) {
+        Node current = root;
+        for (int i = 0; i < word.length(); i++) {
+            char c = word.charAt(i);
+            Node node = current.next.get(c);
+            if (node == null) {
+                return false;
+            }
+            current = node;
+        }
+        // current 就是 word 的最后一个字符的 Node
+        // 如果只存在 Panda 这个词，查询 pan，虽然有这 3 个单词，但是并不存在该单词
+        return current.isWord;
+    }
+
+    /**
+     * Trie 是否包含某个前缀
+     *
+     * @param prefix 前缀
+     * @return 存在返回 true，反之返回 false
+     */
+    public boolean containsPrefix(String prefix) {
+        Node current = root;
+        for (int i = 0; i < prefix.length(); i++) {
+            char c = prefix.charAt(i);
+            Node node = current.next.get(c);
+            if (node == null) {
+                return false;
+            }
+            current = node;
+        }
+        return true;
+    }
+
+    /**
+     * 删除操作
+     * 1. 如果单词是一个单词的前缀，只需要把该 word 的最后一个节点的 isWord 改成 false
+     * 2. 如果单词的所有字母都没有多个分支，删除整个单词
+     * 3. 如果单词除了最后一个字母，其他的字母有多个分支
+     * 4. 如果单词的前缀是一个单词，则删除单词的后半部分
+     *
+     * @param word
+     * @return
+     */
+    public boolean remove(String word) {
+        Node multiChildNode = null;
+        int multiChildNodeIndex = -1;
+        Node current = root;
+        for (int i = 0; i < word.length(); i++) {
+            Node child = current.next.get(word.charAt(i));
+            // 如果 Trie 中没有这个单词
+            if (child == null) {
+                return false;
+            }
+//            System.out.println("word.charAt(i):" + word.charAt(i) + ",child.next:" + child.next);
+            // 当前节点的子节点大于 1 个 或者单词的前缀是一个单词
+            if (child.next.size() > 1 || (i != word.length() - 1 && child.isWord)) {
+                multiChildNodeIndex = i;
+                multiChildNode = child;
+            }
+            current = child;
+        }
+        // 如果单词后面还有子节点
+        if (current.next.size() > 0) {
+            if (current.isWord) {
+                current.isWord = false;
+                size--;
+                return true;
+            }
+            // 不存在该单词，该单词只是前缀
+            return false;
+        }
+        // 如果单词的又有字母的都没有多个分支，删除整个单词
+        if (multiChildNodeIndex == -1) {
+            root.next.remove(word.charAt(0));
+            size--;
+            return true;
+        }
+        System.out.println("multiChildNodeIndex:" + multiChildNodeIndex + ",multiChildNode:" + multiChildNode);
+        // 如果单词的除了最后一个单词，其他的字母有分支
+        if (multiChildNodeIndex != word.length() - 1) {
+            multiChildNode.next.remove(word.charAt(multiChildNodeIndex + 1));
+            size--;
+            return true;
+        }
+        return false;
+    }
+
+    public void showTrie() {
+        Deque<Node> nodeQueue = new ArrayDeque<>();
+        nodeQueue.addLast(root);
+        while (!nodeQueue.isEmpty()) {
+            Node node = nodeQueue.removeFirst();
+            System.out.println("node.isWord:" + node.isWord + ",node.next:" + node.next);
+            Map<Character, Node> nextMap = node.next;
+            if (nextMap != null) {
+                Set<Character> keySet = nextMap.keySet();
+                for (Character key : keySet) {
+//                    System.out.print("key:" + key + ",");
+                    nodeQueue.addLast(nextMap.get(key));
+                }
+                System.out.print("\n");
+            }
+        }
+    }
+
+
+    private static class Node {
+        public boolean isWord = false;
+        public Map<Character, Node> next;
+
+        public Node() {
+            next = new TreeMap<>();
+        }
+
+        public Node(boolean isWord) {
+            this();
+            this.isWord = isWord;
+        }
+
+    }
+}
+
+```
+
 
 
 
@@ -160,8 +336,35 @@ search("b..") -> true
 
 　　如果下一个字符是 .，那么需要遍历该节点的所有子节点，对所有子节点的处理就是一个递归程序：
 
-```
+```java
+    public boolean searchByWildCard(String express) {
+        return search(root, express, 0);
+    }
 
+    private boolean search(Node node, String express, int index) {
+        // 如果已经到了待查询字符串的尾端了
+        if (index == express.length()) {
+            return node.isWord;
+        }
+        char c = express.charAt(index);
+        if (c != '.') {
+            Node nextChar = node.next.get(c);
+            if (nextChar == null) {
+                return false;
+            }
+            return search(nextChar, express, index + 1);
+        } else {
+            // 如果是通配符
+            Map<Character, Node> nextNodes = node.next;
+            // 遍历所有的子节点
+            for (Map.Entry<Character, Node> entry : nextNodes.entrySet()) {
+                if (search(entry.getValue(), express, index + 1)) {
+                    return true;
+                }
+            }
+            return false;
+        }
+    }
 ```
 
 
@@ -190,6 +393,91 @@ search("b..") -> true
 　　总结一句话就是，求出所有符合该前缀的字符串的键值的总和。
 
 　　节点需要保存一个键值，用于求和。节点 Node 不需要维护 isWord 这个属性了，因为不关注是不是一个单词。
+
+```java
+public class MapSum {
+
+    public static void main(String[] args) {
+        MapSum mapSum = new MapSum();
+        mapSum.insert("apple", 3);
+        System.out.println(mapSum.sum("ap"));
+        mapSum.insert("app", 2);
+        mapSum.show();
+        System.out.println(mapSum.sum("ap"));
+    }
+
+    private Node root;
+
+    public MapSum() {
+        root = new Node();
+    }
+
+    public void insert(String word, int value) {
+        char[] charArray = word.toCharArray();
+        Node currentNode = root;
+        for (int i = 0; i < charArray.length; i++) {
+            char c = charArray[i];
+            if (!currentNode.next.containsKey(c)) {
+                currentNode.next.put(c, new Node());
+            }
+            currentNode = currentNode.next.get(c);
+        }
+        currentNode.value = value;
+    }
+
+    public void show() {
+        show(root);
+    }
+
+    private void show(Node n) {
+        if (n == null) {
+            return;
+        }
+        System.out.println("value:" + n.value + "，next:" + n.next);
+        for (char c : n.next.keySet()) {
+            show(n.next.get(c));
+        }
+    }
+
+    public int sum(String prefix) {
+        Node cur = root;
+        for (int i = 0; i < prefix.length(); i++) {
+            char c = prefix.charAt(i);
+            Node node = cur.next.get(c);
+            if (node == null) {
+                return 0;
+            }
+            cur = node;
+        }
+        // cur 指向 prefix 的最后一个字符的 Node
+        // 对每个以 prefix 为前缀的 node 进行累加
+        return countValue(cur);
+    }
+
+    private int countValue(Node node) {
+        int result = node.value;
+        for (char c : node.next.keySet()) {
+            result += countValue(node.next.get(c));
+        }
+        return result;
+    }
+
+
+    public static class Node {
+        public int value = 0;
+        public Map<Character, Node> next;
+
+        public Node() {
+            next = new HashMap<>();
+        }
+
+        public Node(int value) {
+            this();
+            this.value = value;
+        }
+    }
+}
+```
 
 
 
