--- a/Java/线程/哲学家就餐问题.md
+++ b/Java/线程/哲学家就餐问题.md
@@ -1,8 +1,6 @@
 # 哲学家就餐问题
 
-　　哲学家就餐问题
-
-### 1. 哲学家进餐问题
+## 描述
 
 ![](image/哲学家进餐问题.jpg)
 
@@ -27,7 +25,128 @@
 
 ## 代码实现：实现第 2 种方案
 
+```java
+/**
+ * 每个哲学家相当于一个线程
+ */
+public class Philosopher extends Thread {
+    private String name;
+    private Fork fork;
 
+    public Philosopher(String name, Fork fork) {
+        super(name);
+        this.name = name;
+        this.fork = fork;
+    }
+
+    @Override
+    public void run() {
+        while (true) {
+            thinking();
+            fork.takeFork();
+            eating();
+            fork.putFork();
+        }
+    }
+
+    public void eating() {
+        System.out.println("I am Eating:" + name);
+        try {
+            sleep(1000); // 模拟吃饭，占用一段时间资源
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+
+    public void thinking() {
+        System.out.println("I am Thinking:" + name);
+        try {
+            sleep(1000); // 模拟思考
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        }
+    }
+
+    public static class Fork {
+        // 6 只筷子，初始为都未被用
+        private boolean[] used = {false, false, false, false, false, false};
+
+        public synchronized void takeFork() {
+            String name = Thread.currentThread().getName();
+            int i = Integer.parseInt(name);
+            while (used[i] || used[(i + 1) % 5]) {
+                try {
+                    wait();// 如果左右手有一只正被使用，等待
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+            used[i] = true;
+            used[(i + 1 % 5)] = true;
+        }
+
+        /**
+         * 必须同时释放左右手的筷子
+         */
+        public synchronized void putFork() {
+            String name = Thread.currentThread().getName();
+            int i = Integer.parseInt(name);
+            used[i] = false;
+            used[(i + 1) % 5] = false;
+            notifyAll(); // 唤醒其他线程
+        }
+    }
+
+    public static void main(String[] args) {
+        Fork fork = new Fork();
+        new Philosopher("0",fork).start();
+        new Philosopher("1",fork).start();
+        new Philosopher("2",fork).start();
+        new Philosopher("3",fork).start();
+        new Philosopher("4",fork).start();
+    }
+}
+```
+
+　　运行结果：
+
+```java
+I am Thinking:3
+I am Thinking:2
+I am Thinking:1
+I am Thinking:4
+I am Thinking:0
+I am Eating:3
+I am Eating:1
+I am Thinking:3
+I am Eating:2
+I am Thinking:1
+I am Eating:0
+I am Eating:4
+I am Eating:1
+I am Thinking:2
+I am Thinking:0
+I am Thinking:4
+I am Eating:0
+I am Thinking:1
+I am Eating:2
+I am Thinking:2
+I am Eating:3
+I am Eating:1
+I am Thinking:0
+I am Eating:4
+I am Thinking:3
+I am Eating:2
+I am Eating:0
+I am Thinking:1
+I am Thinking:0
+I am Thinking:4
+I am Eating:3
+I am Thinking:2
+......
+```
+
+　　分析：上述解决方案解决了死锁问题。可以看到最多只能有两条相邻的 eating 结果，因为每个时刻最多能够满足两个人同时进餐，且两人座位不相邻。
 
 
 ## 参考文章
