--- a/system/进程与线程.md
+++ b/system/进程与线程.md
@@ -183,26 +183,28 @@
 
 ##### 5.1.1.3. 最短剩余时间优先 shortest remaining time next（SRTN）
 
-　　最短作业优先的抢占式版本，按剩余运行时间的顺序进行调度。当一个新的作业到达时，其整个运行时间与当前进程的剩余时间作比较。如果新的进程需要的时间更少，则挂起当前进程，运行新的进程。否则新的进程等待。
+　　最短作业优先的抢占式版本，按剩余运行时间的顺序进行调度。当一个新的作业到达时，其整个运行时间与当前进程的剩余时间作比较。如果新的进程需要的时间更少，则挂起当前进程，运行新的进程，否则新的进程等待。
+
+##### 5.1.1.4. 高响应比优先
+
+　　高响应比算法 HRN：响应比 = （等待时间+要求服务时间）/要求服务时间；
+
+　　按照高相应比的顺序进行调度，可以防止等待时间过长的任务饿死。
 
 #### 5.1.2. 交互式系统
 
-　　交互式系统有大量的用户交互操作，在该系统中调度算法的目标是快读地进行响应。
+　　交互式系统有大量的用户交互操作，在该系统中调度算法的目标是快速地进行响应。
 
-##### 5.1.2.1. 时间片轮转
+##### 5.1.2.1. 时间片轮转 RR
 
-　　将所有就绪进程按 FCFS 地原则排成一个队列，每次调度时，把 CPU 时间分配给队首进程，该进程可以执行一个时间片。当时间片用完时，由计时器发出时钟中断，调度程序并停止该进程的执行，并将它送往就绪队列的末尾，同时继续把 CPU 时间分配给队首的进程。
+　　将所有就绪进程按 FCFS 的原则排成一个队列，每次调度时，把 CPU 时间分配给队首进程，该进程可以执行一个时间片。当时间片用完时，由计时器发出时钟中断，调度程序停止该进程的执行，并将它送往就绪队列的末尾，同时继续把 CPU 时间分配给队首的进程。响应时间可以得到保证。
 
 　　时间片轮转算法的效率和时间片的大小有很大关系：
 
 * 因为进程切换都要保存进程的信息并且载入新进程的信息，如果时间片太小，会导致进程切换得太频繁，在进程切换上就会花过多时间。
-* 而如果时间片太长，那么实时性就不能得到保证。
-
-时间片轮转调度 RR：按到达的先后对进程放入队列中，然后给队首进程分配 CPU 时间片，时间片用完之后计时器发出中断，暂停当前进程并将其放到队列尾部，循环；（响应时间可以得到保证）。
+* 如果时间片太长，那么实时性就不能得到保证。
 
 ##### 5.1.2.2. 优先级调度
-
-高响应比算法 HRN：响应比 = （等待时间+要求服务时间）/要求服务时间；
 
 　　为每个进程分配一个优先级，按优先级进行调度。
 
@@ -210,13 +212,13 @@
 
 ##### 5.1.2.3. 多级反馈队列
 
-多级反馈队列调度算法：目前工人较好的调度算法；设置多个就绪队列并为每个队列设置不同的优先级，第一个队列优先级最高，其余依次递减。优先级越高的队列分配的时间片越短，进程到达之后按 FCFS 放入第一个队列，如果调度执行后没有完成，那么放到第二个队列尾部等待调度，如果第二个调度仍然没有完成，放入第三队列尾部...。只有当前一个队列为空时才会去调度下一个队列的进程。
+　　多级反馈队列调度算法：目前公认较好的调度算法。设置多个就绪队列并为每个队列设置不同的优先级，第一个队列优先级最高，其余依次递减。优先级越高的队列分配的时间片越短，进程到达之后按 FCFS 放入第一个队列，如果调度执行后没有完成，那么放到第二个队列尾部等待调度，如果第二个调度仍然没有完成，放入第三队列尾部...。只有当前一个队列为空时才会去调度下一个队列的进程。
 
 　　一个进程需要执行 100 个时间片，如果采用时间片轮转调度算法，那么需要交换 100 次。
 
-　　多级队列是为这种需要连续执行多个时间片的进程考虑，它设置了多个队列，每个队列时间片大小都不同，例如 1、2、4、8...。进程在第一个队列没执行完，就会被移到下一个队列。这种方式下，之前的进程只需要交换 7 次。
+　　多级反馈队列是为这种需要连续执行多个时间片的进程考虑，它设置了多个队列，每个队列时间片大小都不同，例如 1、2、4、8...。进程在第一个队列没执行完，就会被移到下一个队列。这种方式下，之前的进程只需要交换 7 次。
 
-　　每个队列优先权也不同，最上面的优先级最高。因此只有上一个队列没有进程再排队，才能调度当前队列上的进程。
+　　每个队列优先权也不同，最上面的优先级最高。因此只有上一个队列没有进程在排队，才能调度当前队列上的进程。
 
 　　可以将这种调度算法看成时间片轮转调度算法和优先级调度算法的结合。
 
@@ -228,38 +230,25 @@
 
 　　分为硬实时和软实时，前者必须满足绝对的截至时间，后者可以容忍一定的超时。
 
-## 进程同步
+## 6. 进程同步
 
 　　经典的进程同步问题：生产者-消费者问题；哲学家进餐问题；读者-写者问题。
 
 　　同步的解决方案：管程、信号量。
 
-### 1. 临界区
+### 6.1. 临界区
 
 　　对临界资源进行访问的那段代码称为临界区。
 
 　　为了互斥访问临界资源，每个进程在进入临界区之前，需要先进行检查。
 
-### 2. 同步与互斥
+### 6.2. 同步与互斥
 
 　　同步：多个进程因为合作产生的直接制约关系，使得进程有一定的先后执行关系。
 
-　　互斥：多个进程在同一适合只有一个进程能进入临界区。
+　　互斥：多个进程在同一时刻只有一个进程能进入临界区。
 
-### 3. 信号量
-
-　　信号量（Semaphore）是一个整型变量，可以对其执行 down 和 up 操作，也就是常见的 P 和 V 操作。
-
-* down：如果信号量大于 0，执行 -1 操作；如果信号量等于 0，进程睡眠，等待信号量大于 0；
-* up：对信号量执行 +1 操作，唤醒睡眠的进程让其完成 down 操作。
-
-　　down 和 up 操作需要被设计成原语，不可分割，通常的做法是在执行这些操作的时候屏蔽中断。
-
-　　如果信号量的取值只能为 0 或者 1，那么就成为了互斥量（Mutex），0 表示临界区已经加锁，1 表示临界区解锁。
-
-
-
-#### 4.1.9. 信号量机制
+### 6.3. 信号量 Semaphore
 
 　　信号量机制：即利用 PV 操作来对信号量进行处理。
 
@@ -271,41 +260,52 @@
 
 　　注意，信号量的值仅能由 PV 操作来改变。
 
-　　一般来说，信号量 S>= 0 时，S 表示可用资源的数量。执行一次 P 操作意味着请求分配一个单位资源，因此 S 的值减 1；当 S < 0 时，表示已经没有可用资源，请求者必须等待别的进程释放该类资源，它才能运行下去。而执行一个 V 操作意味着释放一个单位资源，因此 S 的值加 1；若 S <= 0，表示有某些进程正在等待该资源，因此要环形一个等待状态的进程，使之运行下去。 
+　　 P 和 V 操作，也就是常见的 down 和 up 操作：
 
-### 4. 管程
+* P：如果信号量大于 0，执行 -1 操作；如果信号量等于 0，进程睡眠，等待信号量大于 0；
+* V：对信号量执行 +1 操作，唤醒睡眠的进程让其完成 down 操作。
+
+　　P和 V 操作需要被设计成原语，不可分割，通常的做法是在执行这些操作的时候屏蔽中断。
+
+　　一般来说，信号量 S >= 0 时，S 表示可用资源的数量。执行一次 P 操作意味着请求分配一个单位资源，因此 S 的值减 1；当 S < 0 时，表示已经没有可用资源，请求者必须等待别的进程释放该类资源，它才能运行下去。而执行一个 V 操作意味着释放一个单位资源，因此 S 的值加 1；若 S <= 0，表示有某些进程正在等待该资源，因此要唤醒一个等待状态的进程，使之运行下去。 
+
+　　如果信号量的取值只能为 0 或者 1，那么就成为了互斥量（Mutex），0 表示临界区已经加锁，1 表示临界区解锁。
+
+### 6.4. 管程
 
 　　使用信号量机制实现的生产者消费者问题需要客户端代码做很多控制，而管程把控制的代码独立出来，不仅不容易出错，也使得客户端代码调用更容易。
 
 　　管程有一个重要特性：在一个时刻只能有一个进程使用管程。进程在无法继续执行的时候不能一直占用管程，否则其他进程永远不能使用管程。
 
-　　管程引入了条件变量以及相关的操作：wait() 和 signal() 来实现同步操作。对条件变量执行 wait() 操作会导致调用进程阻塞，把管程让出来给另一个进程持有。singal() 操作用于唤醒被阻塞的进程。
+　　管程引入了条件变量以及相关的操作：wait() 和 signal() 来实现同步操作。对条件变量执行 wait() 操作会导致调用进程阻塞，把管程让出来给另一个进程持有。signal() 操作用于唤醒被阻塞的进程。
 
-## 进程通信
-
-　　进程同步与进程通信很容易混淆，它们的区别在于：
-
-* 进程同步：控制多个进程按一定顺序执行。
-* 进程通信：进程间传输信息。
+## 7. 进程通信
 
 　　进程通信是一种手段，而进程同步是一种目的。也就是说，为了能够达到进程同步的目的，需要让进程进行通信，传输一些进程同步所需要的信息。
 
-
-
-#### 4.1.8. 进程间的通信（同步与互斥）
-
 　　由于多个进程可以并发执行，所以进程间必然存在资源共享和相互合作的问题。进程通信是指各个进程交换信息的过程。
 
-　　同步时合作进程间直接制约问题，互斥是申请临界资源进程间的间接制约问题。（临界资源（Critical Resource,CR）：在同一时间只能供一个进程使用的资源，例如：打印机、磁带机等硬件资源）。
+　　同步是合作进程间直接制约问题，互斥是申请临界资源进程间的间接制约问题。
 
-　　临界区管理 4 条原则：（临界区：每个进程中访问临界资源的那段代码）
+　　临界资源（Critical Resource,CR）：在同一时间只能供一个进程使用的资源，例如：打印机、磁带机等硬件资源。
+
+　　临界区：每个进程中访问临界资源的那段代码。
+
+　　临界区管理 4 条原则：
 
 1. 有空即进。
 2. 无空则等。
 3. 有限等待：要求访问临界区的进程，保证有限时间内进入临界区，避免死等。
 4. 让权等待：进程不能进入临界区时，应立即释放处理机，避免忙等。
 
-### 1. 管道
+　　进程同步与进程通信很容易混淆，它们的区别在于：
+
+* 进程同步：控制多个进程按一定顺序执行。
+* 进程通信：进程间传输信息。
+
+　　进程间通信的手段有：管道、FIFO（命名管道）、消息队列、信号量、共享存储、套接字。
+
+### 7.1. 管道
 
 　　管道是通过调用 pipe 函数创建的，fd[0] 用于读，fd[1] 用于写。
 
@@ -316,7 +316,7 @@
 
 ![](image/管道.png)
 
-### 2. FIFO
+### 7.2. FIFO
 
 　　也称为命名管道，去除了管道只能在父子进程中使用的限制。
 
@@ -324,39 +324,35 @@
 
 ![](image/FIFO.png)
 
-### 3. 消息队列
+### 7.3. 消息队列
 
 　　相比于 FIFO，消息队列具有以下有点：
 
 1. 消息队列可以独立于读写进程存在，从而避免了 FIFO 中同步管道的打开和关闭时可能产生的困难；
 2. 避免了 FIFO 的同步阻塞问题，不需要进程自己提供同步方法；
-3. 读进程可以根据消息里欸行有选择地接收消息，而不像 FIFO 那样只能默认地接收。
+3. 读进程可以根据消息类型有选择地接收消息，而不像 FIFO 那样只能默认地接收。
 
-### 4. 信号量
+### 7.4. 信号量
 
 　　它是一个计数器，用于为多个进程提供对共享数据对象的访问。
 
-### 5. 共享存储
+### 7.5. 共享存储
 
-　　允许多个进程共享一个给定的存储区。因为熟不需要再进程之间复制，所以这是最快的一种 IPC。
+　　允许多个进程共享一个给定的存储区。因为数据不需要再进程之间复制，所以这是最快的一种 IPC。
 
 　　需要使用信号量来同步对共享存储的访问。
 
-　　多个进程可以将同一个文件映射到它们的地址空间从而实现共享内存。另外 XSL 共享内存不是使用文件，而是使用内存的匿名段。
+　　多个进程可以将同一个文件映射到它们的地址空间从而实现共享内存。另外 XSI 共享内存不是使用文件，而是使用内存的匿名段。
 
-### 6. 套接字
+### 7.6. 套接字
 
 　　与其他通信机制不同的是，它可用于不用机器间的进程通信。
 
-## 进程的分类
-
-https://www.cnblogs.com/xdyixia/p/9257160.html
-
-## 池
+## 8. 池
 
 　　所谓池的概念，一般是指应用提前向内核批量申请资源，用于接下来的使用和回收，减少资源的初始化和销毁次数等开销，以达到提高系统性能的目标。
 
-　　内存池：真正使用钱申请一片内存区域，有新需求时取出其中一部分使用，不够用时再重新申请新内存。
+　　内存池：真正使用前申请一片内存区域，有新需求时取出其中一部分使用，不够用时再重新申请新内存。
 
 　　进程池：应用预先创建一组子进程，所有子进程运行相同代码，拥有相同属性，比如 PGID 和优先级等。
 
@@ -365,9 +361,9 @@ https://www.cnblogs.com/xdyixia/p/9257160.html
 1. 主进程通过随机或 round robin 算法来选择子进程作为新任务的服务进程；
 2. 通过一个共享队列来进行同步，所有子进程从该队列中获取任务，不过同时只能有一个子进程能成功获得新任务处理权。
 
-　　线程持：主要应用于任务小而多，处理时间短的场景，比如简单网页请求等。
+　　线程池：主要应用于任务小而多，处理时间短的场景，比如简单网页请求等。
 
-## 参考文章
+## 9. 参考文章
 
 1. [操作系统基础知识总结整理](https://blog.csdn.net/Song_JiangTao/article/details/79670805)
 2. [操作系统基础知识总结（重要）](https://www.cnblogs.com/xdyixia/p/9274909.html)
