--- a/Java/线程/使用管程实现生产者-消费者模式.md
+++ b/Java/线程/使用管程实现生产者-消费者模式.md
@@ -2,7 +2,7 @@
 
 ## 1. 管程
 
-　　使用信号量机制实现的生产者消费者问题需要客户端代码做很多控制，而管程把控制的代码独立出来，不仅不同意出错，也是扽客户端代码调用更容易。
+　　使用信号量机制实现的生产者消费者问题需要客户端代码做很多控制，而管程把控制的代码独立出来，不仅不容易出错，也会使客户端代码调用更容易。
 
 　　管程有一个重要特性：在一个时刻只能有一个进程使用管程。进程在无法继续执行的时候不能一直占用管程，否则其他进程永远不能使用管程。
 
@@ -12,13 +12,13 @@
 
 　　Java 中可以使用 ReentrantLock 来实现管程。
 
-　　使用两个 Condition 来完成，empty 来记录缓冲区的数量，在生产者进程中使用，当 size 不大于 cacheSize 的时候才可以放入物品；full 来记录满缓冲区的数量，在消费者进程中使用，当 size 大于 0 的时候菜可以取出物品。
+　　使用两个 Condition 来完成，empty 来记录空缓冲区的数量，在生产者进程中使用，当 size 不大于 cacheSize 的时候才可以放入物品；full 来记录满缓冲区的数量，在消费者进程中使用，当 size 大于 0 的时候才 可以取出物品。
 
 ```java
 public class Monitor {
 
     public static void main(String[] args) {
-        Cache cache = new Cache(10);//默认库房最多只能存放 10 个产品
+        Cache cache = new Cache(10);// 默认库房最多只能存放 10 个产品
         new Thread(new Producer(cache)).start();
         new Thread(new Consumer(cache)).start();
     }
@@ -39,7 +39,6 @@ public class Monitor {
                 try {
                     cache.produce();
                     Thread.sleep((int) (1000 * Math.random()));
-
                 } catch (InterruptedException e) {
                     e.printStackTrace();
                 }
@@ -138,5 +137,5 @@ public class Monitor {
 ```
 
 
-## 参考文章
+## 3. 参考文章
 1. [使用管程实现生产者-消费者问题](https://blog.csdn.net/kinnisoy/article/details/102999857)
