--- a/Java/线程/哲学家就餐问题.md
+++ b/Java/线程/哲学家就餐问题.md
@@ -1,29 +1,22 @@
 # 哲学家就餐问题
 
-## 描述
+## 1. 描述
 
 ![](image/哲学家进餐问题.jpg)
 
-　　五个哲学家围着一张圆桌，每个哲学家面前放着食物。哲学家的生活有两种交替活动：吃饭以及思考。当一个哲学家吃饭时，需要先拿起自己左右两边的两根筷子，并且一次只能拿起一根筷子。
-
-　　如果所有哲学家同时拿起左手边的筷子，那么所有哲学家都在等待其他哲学家吃完并释放自己手中的筷子，导致死锁。
-
-　　为了防止死锁，可以设置两个条件：
-
-1. 必须同时拿起左右两根筷子；
-2. 只有在两个邻居都没有进餐的情况下才允许进餐。
-
 　　哲学家就餐问题是 1965 年由 Dijkstra 提出的一种线程同步的问题。
 
-　　问题描述：一圆桌前坐着 5 位哲学家，两个人中间有一只筷子，桌子中央有面条，哲学家思考问题，当饿了的时候拿起左右两只筷子吃饭，必须拿到两只筷子才能吃饭。上述问题会产生死锁的情况，当 5 个哲学家都拿起自己右手边的筷子，准备拿左手边的筷子时产生死锁。
+　　问题描述：一圆桌前坐着 5 位哲学家，两个人中间有一只筷子，桌子中央有面条，哲学家思考问题，当饿了的时候拿起左右两只筷子吃饭，并且一次只能拿起一根筷子，必须拿到两只筷子才能吃饭。
+
+　　如果所有哲学家同时拿起左手边的筷子，那么所有哲学家都在等待其他哲学家吃完并释放自己手中的筷子，导致死锁。
 
 　　解决办法：
 
 1. 添加一个服务生，只有当经过服务生同意之后才能拿筷子，服务生负责避免死锁产生。
-2. 每个哲学家必须确定自己左右手的筷子都可用的时候，才能同时拿起两只筷子进餐，吃完之后同时放下两只筷子。
+2. 每个哲学家必须确定自己左右手的筷子都可用的时候，同时拿起两只筷子进餐，吃完之后同时放下两只筷子。
 3. 规定每个哲学家拿筷子时必须拿序号小的那只，这样最后一位未拿到筷子的哲学家只剩下序号大的那只筷子，不能拿起，剩下的这只筷子就可以被其他哲学家使用，避免了死锁。这种情况不能很好的利用资源。
 
-## 代码实现：实现第 2 种方案
+## 2. 代码实现：实现第 2 种方案
 
 ```java
 /**
@@ -66,7 +59,7 @@ public class Philosopher extends Thread {
             e.printStackTrace();
         }
     }
-
+·		// 筷子
     public static class Fork {
         // 6 只筷子，初始为都未被用
         private boolean[] used = {false, false, false, false, false, false};
@@ -74,6 +67,7 @@ public class Philosopher extends Thread {
         public synchronized void takeFork() {
             String name = Thread.currentThread().getName();
             int i = Integer.parseInt(name);
+          	// 左边的筷子可用或者右边的筷子可用
             while (used[i] || used[(i + 1) % 5]) {
                 try {
                     wait();// 如果左右手有一只正被使用，等待
@@ -81,6 +75,7 @@ public class Philosopher extends Thread {
                     e.printStackTrace();
                 }
             }
+          	// 两边的筷子都可用
             used[i] = true;
             used[(i + 1 % 5)] = true;
         }
@@ -149,5 +144,5 @@ I am Thinking:2
 　　分析：上述解决方案解决了死锁问题。可以看到最多只能有两条相邻的 eating 结果，因为每个时刻最多能够满足两个人同时进餐，且两人座位不相邻。
 
 
-## 参考文章
+## 3. 参考文章
 1. [JAVA多线程学习--哲学家就餐问题](https://www.cnblogs.com/vettel/p/3438257.html)
