--- a/DataStructure/数据结构/树/字典树.md
+++ b/DataStructure/数据结构/树/字典树.md
@@ -1,12 +1,12 @@
 #  字典树
 
-## Trie 字典树的基本概念
+## 1. Trie 字典树的基本概念
 
 　　一个线性表的顺序查找的时间复杂度为 O(n)；二分搜索树的查找为 O(logn)，它们都和数据结构中的元素个数相关。
 
-　　Tire 字典树（主要用于存储字符串）查找速度主要和它的元素（字符串）的长度相关。
+　　Trie 字典树（主要用于存储字符串）查找速度主要和它的元素（字符串）的长度相关。
 
-　　Tire 字典树主要用于存储字符串，Tire 的每个 Node 保存一个字符。用链表来描述的话，就是一个字符串就是一个链表。每个 Node 都保存了它的所有子节点。
+　　Trie 字典树主要用于存储字符串，Trie 的每个 Node 保存一个字符。用链表来描述的话，就是一个字符串就是一个链表。每个 Node 都保存了它的所有子节点。
 
 　　例如往字典树中插入 see、pain、paint 三个单词，Trie 字典树如下所示：
 
@@ -14,9 +14,9 @@
 
 　　也就是说如果只考虑小写的 26 个字母，那么 Trie 字典树的每个节点都可能有 26 个子节点。
 
-## Tire 字典树的基本操作
+## 2. Trie 字典树的基本操作
 
-### 插入
+### 2.1. 插入
 
 　　使用链表来实现 Trie 字典树，字符串的每个字符作为一个 Node 节点，Node 主要有两部分组成：
 
@@ -27,19 +27,19 @@
 
 　　节点的所有子节点，通过一个 Map 来存储，key 是当前子节点对应的字符，value 是子节点。
 
-### 查找
+### 2.2. 查找
 
-　　Tire 查找操作就比较简单了，遍历带朝朝的字符串的字符，如果每个节点都存在，并且待查找字符串的最后一个字符对应的 Node 的 isWord 属性为 true，则表示该单词存在。
+　　Trie 查找操作就比较简单了，遍历带查找的字符串的字符，如果每个节点都存在，并且待查找字符串的最后一个字符对应的 Node 的 isWord 属性为 true，则表示该单词存在。
 
-### 前缀查询
+### 2.3. 前缀查询
 
-　　前缀查询和上面的查询操作基本类似，就不需要判断 isWord 类。
+　　前缀查询和查询操作基本类似，就不需要判断 isWord 类。
 
-### 删除
+### 2.4. 删除
 
-　　Tire 的删除操作就稍微复杂一些，主要分为以下 3 中抢矿：
+　　Trie 的删除操作就稍微复杂一些，主要分为以下 3 种情况：
 
-#### 如果单词是另一个单词的前缀
+#### 2.4.1. 如果单词是另一个单词的前缀
 
 　　如果待删除的单词是另一个单词的前缀，只需要把该单词的最后一个节点的 isWord 的改成 false。
 
@@ -49,7 +49,7 @@
 
 ![](image/删除单词是另一个单词的前缀.png)
 
-#### 如果单词的所有字母的都没有多个分支，删除整个单词
+#### 2.4.2. 如果单词的所有字母的都没有多个分支，删除整个单词
 
 　　如果单词的所有字母的都没有多个分支（也就是说该单词所有的字符对应的 Node 都只有一个子节点），则删除整个单词。
 
@@ -57,11 +57,17 @@
 
 ![](image/删除单词的所有字母都没有多个分支.png)
 
-#### 如果单词的处理最后一个字母，其他的字母有多个分支
+#### 2.4.3. 如果单词的除了最后一个字母，其他的字母有多个分支
+
+　　如果待删除的单词前缀有很多分支，则从没有分支的部分开始删除。
 
 ![](image/删除单词除了最后一个字母，其他的字符有多个分支.png)
 
-## 基于链表的 Tire 字典树
+#### 2.4.4. 如果待删除的单词的前缀也是一个单词
+
+　　如果待删除的单词的前缀是一个单词，则从前缀单词的后面开始删除。
+
+## 3. 基于链表的 Tire 字典树
 
 ```java
 /**
@@ -125,7 +131,7 @@ public class Trie {
             current = node;
         }
         // current 就是 word 的最后一个字符的 Node
-        // 如果只存在 Panda 这个词，查询 pan，虽然有这 3 个单词，但是并不存在该单词
+        // 如果只存在 Panda 这个词，查询 pan，虽然有这 3 个字符，但是并不存在该单词
         return current.isWord;
     }
 
@@ -152,7 +158,7 @@ public class Trie {
      * 删除操作
      * 1. 如果单词是一个单词的前缀，只需要把该 word 的最后一个节点的 isWord 改成 false
      * 2. 如果单词的所有字母都没有多个分支，删除整个单词
-     * 3. 如果单词除了最后一个字母，其他的字母有多个分支
+     * 3. 如果单词的字符有很多分支，则从没有分支的字符开始删除
      * 4. 如果单词的前缀是一个单词，则删除单词的后半部分
      *
      * @param word
@@ -169,7 +175,7 @@ public class Trie {
                 return false;
             }
 //            System.out.println("word.charAt(i):" + word.charAt(i) + ",child.next:" + child.next);
-            // 当前节点的子节点大于 1 个 或者单词的前缀是一个单词
+            // 当前节点的子节点大于 1 个或者单词的前缀是一个单词
             if (child.next.size() > 1 || (i != word.length() - 1 && child.isWord)) {
                 multiChildNodeIndex = i;
                 multiChildNode = child;
@@ -186,14 +192,14 @@ public class Trie {
             // 不存在该单词，该单词只是前缀
             return false;
         }
-        // 如果单词的又有字母的都没有多个分支，删除整个单词
+        // 如果单词的所有字母的都没有多个分支，删除整个单词
         if (multiChildNodeIndex == -1) {
             root.next.remove(word.charAt(0));
             size--;
             return true;
         }
         System.out.println("multiChildNodeIndex:" + multiChildNodeIndex + ",multiChildNode:" + multiChildNode);
-        // 如果单词的除了最后一个单词，其他的字母有分支
+        // 如果单词的字母有分支，但是后面的单词也有没有分支的
         if (multiChildNodeIndex != word.length() - 1) {
             multiChildNode.next.remove(word.charAt(multiChildNodeIndex + 1));
             size--;
@@ -202,6 +208,7 @@ public class Trie {
         return false;
     }
 
+  	// 广式遍历
     public void showTrie() {
         Deque<Node> nodeQueue = new ArrayDeque<>();
         nodeQueue.addLast(root);
@@ -239,11 +246,7 @@ public class Trie {
 
 ```
 
-
-
-
-
-## 更多关于 Trie 的话题
+## 4. 更多关于 Trie 的话题
 
 　　上面实现的 Trie 中，是使用 TreeMap 来保存节点的所有的子节点，也可以使用 HashMap 来保存所有的子节点，效率更高：
 
@@ -262,7 +265,7 @@ public Node(boolean isWord){
 }
 ```
 
-　　Trie 查询效率非常高，但是对空间的小号还是挺大的，这也是典型的空间换时间。
+　　Trie 查询效率非常高，但是对空间的消耗还是挺大的，这也是典型的空间换时间。
 
 　　可以使用压缩字典树（Compressed Trie），但是维护相对来说复杂一些。
 
@@ -270,15 +273,15 @@ public Node(boolean isWord){
 
 　　可以对 Trie 字典树做些限制，比如每个节点只能有 3 个子节点，左边的节点是小于父节点的，中间的节点是等于父节点的，右边的子节点是大于父节点的，这就是三分搜索 Trie 字典树（Ternary Search Trie）。
 
-## LeetCode 相关字典树的问题
+## 5. LeetCode 相关字典树的问题
 
-### LeetCode 第 208 号问题
+### 5.1. LeetCode 第 208 号问题
 
-#### 问题描述
+#### 5.1.1. 问题描述
 
 　　实现一个 Trie（前缀树），包含 insert、search 和 startsWith 这三个操作。
 
-#### 示例
+#### 5.1.2. 示例
 
 ```java
 Trie trie = new Trie();
@@ -290,19 +293,19 @@ trie.insert("app");
 trie.search("app"); // 返回 true
 ```
 
-#### 问题说明
+#### 5.1.3. 问题说明
 
 　　你可以假设所有的输入都是由小写字母 a-z 构成的。
 
-　　保证所有属兔均为非空字符串。
+　　保证所有输入均为非空字符串。
 
-#### 解决问题
+#### 5.1.4. 解决问题
 
-　　这个问题在实现的 Trie 字段数中已经实现了这个功能了，add() 就是对应的 insert()，contains() 就是对应的 search()，startcontainsPrefix() 就是对应的 startWith()。
+　　这个问题在实现的 Trie 字段数中已经实现了这个功能了，add() 就是对应的 insert()，contains() 就是对应的 search()，startContainsPrefix() 就是对应的 startWith()。
 
-### LeetCode 第 211 号问题
+### 5.2. LeetCode 第 211 号问题
 
-#### 问题描述
+#### 5.2.1. 问题描述
 
 　　设计一个支持以下两种操作的数据结构：
 
@@ -314,7 +317,7 @@ search(word)
 
 　　可以搜索文字或正则表达式字符串，字符串只包含字母 . 或 a-z。. 可以表示任何一个字母。
 
-#### 示例
+#### 5.2.2. 示例
 
 ```java
 addWord("bad")
@@ -326,11 +329,11 @@ search(".ad") -> true
 search("b..") -> true
 ```
 
-#### 问题说明
+#### 5.2.3. 问题说明
 
 　　你可以假设所有单词都是由小写字母 z-a 组成的。
 
-#### 解决问题
+#### 5.2.4. 解决问题
 
 　　这个问题就是上一个问题的基础上加上 . 的处理，稍微复杂点。
 
@@ -367,11 +370,9 @@ search("b..") -> true
     }
 ```
 
+### 5.3. LeetCode 第 677 号问题
 
-
-### LeetCode 第 677 号问题
-
-#### 问题描述
+#### 5.3.1. 问题描述
 
 　　实现一个 MapSum 类里的两个方法，insert 和 sum。
 
@@ -379,7 +380,7 @@ search("b..") -> true
 
 　　对于方法 sum，你将得到一个表示前缀的字符串，你需要返回所有以该前缀开头的键的值的总和。
 
-#### 示例
+#### 5.3.2. 示例
 
 ```java
 输入：insert("apple",3),输出：Null
@@ -388,7 +389,7 @@ search("b..") -> true
 输入：sum("ap")，输出：5
 ```
 
-#### 解决问题
+#### 5.3.3. 解决问题
 
 　　总结一句话就是，求出所有符合该前缀的字符串的键值的总和。
 
@@ -479,9 +480,7 @@ public class MapSum {
 }
 ```
 
-
-
-## 参考文章
+## 6. 参考文章
 
 1. [数据结构与算法（十一）Trie字典树](https://chiclaim.blog.csdn.net/article/details/80711441)
 
