事件分发机制

--- a/Java/线程/读者写者问题.md
+++ b/Java/线程/读者写者问题.md
@@ -18,6 +18,73 @@
 
 ## 实现
 
+```java
+/**
+ * 读者写者问题
+ */
+public class ReaderWriter {
+
+    public static void main(String[] args) {
+        ReentrantReadWriteLock lock = new ReentrantReadWriteLock();
+        for (int i = 0; i < 10; i++) {
+            new Thread(new Reader(lock)).start();
+        }
+        new Thread(new Writer(lock)).start();
+    }
+    
+    public static class Reader implements Runnable {
+        private ReentrantReadWriteLock lock;
+
+        public Reader(ReentrantReadWriteLock lock) {
+            this.lock = lock;
+        }
+
+        @Override
+        public void run() {
+            while (true) {
+                try {
+                    lock.readLock().lock();
+                    System.out.println(Thread.currentThread().getName() + " reading");
+                    TimeUnit.SECONDS.sleep(3);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                } finally {
+                    lock.readLock().unlock();
+                }
+            }
+        }
+    }
+
+    public static class Writer implements Runnable {
+        private ReentrantReadWriteLock lock;
+
+        public Writer(ReentrantReadWriteLock lock) {
+            this.lock = lock;
+        }
+
+        @Override
+        public void run() {
+            while (true) {
+                try {
+                    Thread.sleep(1000L);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+                try {
+                    lock.writeLock().lock();
+                    System.out.println(Thread.currentThread().getName() + " writing");
+                    TimeUnit.SECONDS.sleep(10);
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                } finally {
+                    lock.writeLock().unlock();
+                }
+            }
+        }
+    }
+}
+```
+
 
 
 
