--- a/Java/线程/读者写者问题.md
+++ b/Java/线程/读者写者问题.md
@@ -1,14 +1,12 @@
 # 读者写者问题
 
-　　允许多个进程同时对数据进行读操作，但是不允许读和写以及写和写操作同时发生。
-
-　　一个整形变量 count 记录在对数据进行读操作的进程数量，一个互斥量 count_mutex 用于对 count 加锁，一个互斥量 data_mutex 用于对读写的数据加锁。
-
-## 题目
+## 1. 题目
 
 　　这是一个非常经典的题目，题目大意如下：有一个写者很多读者，多个读者可以同时读文件，但写者在写文件时不允许有读者在读文件，同样有读者读时也不能写。
 
-## 思路
+　　允许多个进程同时对数据进行读操作，但是不允许读和写以及写和写操作同时发生。
+
+　　一个整形变量 count 记录在对数据进行读操作的进程数量，一个互斥量 count_mutex 用于对 count 加锁，一个互斥量 data_mutex 用于对读写的数据加锁。思路：
 
 　　利用 java.util.concurrent.locks.ReentrantReadWriteLock（读写锁）。
 
@@ -16,7 +14,7 @@
 
 　　读者读文件时持有读锁，此时多个读者可以同时读取文件，但写者不能写文件。
 
-## 实现
+## 2. 实现
 
 ```java
 /**
@@ -25,10 +23,13 @@
 public class ReaderWriter {
 
     public static void main(String[] args) {
+        // 一个读写锁
         ReentrantReadWriteLock lock = new ReentrantReadWriteLock();
         for (int i = 0; i < 10; i++) {
+            // 10 个读者
             new Thread(new Reader(lock)).start();
         }
+        // 1 个写者
         new Thread(new Writer(lock)).start();
     }
     
@@ -43,12 +44,14 @@ public class ReaderWriter {
         public void run() {
             while (true) {
                 try {
+                  	// 读锁锁住
                     lock.readLock().lock();
                     System.out.println(Thread.currentThread().getName() + " reading");
                     TimeUnit.SECONDS.sleep(3);
                 } catch (InterruptedException e) {
                     e.printStackTrace();
                 } finally {
+                  	// 读锁解锁
                     lock.readLock().unlock();
                 }
             }
@@ -71,12 +74,14 @@ public class ReaderWriter {
                     e.printStackTrace();
                 }
                 try {
+                  	// 写锁锁住
                     lock.writeLock().lock();
                     System.out.println(Thread.currentThread().getName() + " writing");
                     TimeUnit.SECONDS.sleep(10);
                 } catch (InterruptedException e) {
                     e.printStackTrace();
                 } finally {
+                  	// 写锁释放
                     lock.writeLock().unlock();
                 }
             }
@@ -86,7 +91,5 @@ public class ReaderWriter {
 ```
 
 
-
-
-## 参考文章
+## 3. 参考文章
 1. [Java并发-读者写者问题](https://blog.csdn.net/weixin_36210698/article/details/80900577)
