事件分发与树

--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -129,11 +129,40 @@
 
 1. 1 个 Java 文件问题
 2. 运动  天
-3. 绘画 天
 4. IP 协议
 5. ipv4 和 ipv6
 6. 常见的网络攻击方式
-7. 
+6. Condition 知识
+7. ReentrantLock 知识
+8. ConcurrentHashMap 知识
+9. 锁知识
+10. 死锁知识
+11. 操作系统知识
+12. 树的基本知识
+13. 二叉树
+14. 平衡二叉树
+15. 二叉搜索树
+16. 线段树
+17. 字典树
+
+### 2020 年 7 月
+
+1. 写者读者问题
+
+#### 计划
+
+1. 排序算法
+2. 查找算法
+3. 红黑树
+4. b树
+5. huffmen树
+6. 图
+7. gradle
+8. 数据库
+9. View 事件分发机制
+10. ViewGroup 事件分发机制
+11. glide 整理
+12. 简历
 
 
 
@@ -200,12 +229,12 @@
    * treeMap
    * NIO
    * String
-   * ReentrantLock
-   * Condition
    * 动态代理类 Proxy
-   * CurrentHashMap
-   * 死锁
-   * 锁
+   * ReentrantLock - 已完成
+   * Condition - 已完成
+   * ConcurrentHashMap - 已完成
+   * 死锁 - 已完成
+   * 锁 - 已完成
    * threadLocal原理 - 已完成
    * volatile - 数据从主内存直接获取 - 已完成
    * synchronized - 同步 - 已完成
@@ -217,8 +246,7 @@
    * 查找算法
 6. 其他
    * Gradle
-   * 银行家算法
-   * 操作系统知识
+   * 操作系统知识 - 已完成
    * 责任链模式 - 完成
 
 ## 后续
@@ -277,11 +305,11 @@
 
 24. 泛型 - 已完成
 
-25. 反射
+25. 反射 - 已完成
 
 26. 代理 - 已完成
 
-24. 注解
+24. 注解 - 已完成
 
 25. 
 
